fixes white squares and unneccesary spacing

--- a/src/components/BookingComponent/BookingComponent.scss
+++ b/src/components/BookingComponent/BookingComponent.scss
@@ -1,6 +1,6 @@
 @import '../../styles/style.scss';
 
-main {
+#booking {
   background-color: $primaryColor;
   height: 100vh;
   padding-top: 1rem;
