--- a/src/components/FooterComponent/FooterComponent.scss
+++ b/src/components/FooterComponent/FooterComponent.scss
@@ -5,7 +5,6 @@ footer {
   border: 1px solid white;
   height: 150px;
   background-color: $secondaryColor;
-  margin-top: 100vh;
   padding: 3rem;
 }
 .footerContent {
